# mini-drop-test

./: .dockerignore  .gitignore  DESIGN.md  README.md  docker-compose.release.yml  docker-compose.yml
analysis/: .gitignore  Dockerfile  ai_advisor.py  apiserver_client.py  config.ini  config.ini.example  config.py  error.py  hotmethod_analyzer.py  requirements.txt  stats.py  storage.py  suggestion_parser.py
analysis/analyzers/: advisor.py  assembly_code_analyzer.py  biotrace.py  bw_sync_analyzer.py  detect_bw_sync.py  flamegraph.py  memleak_analyzer.py  namespace_parse.py  pprof_data_parser.py  pprof_heap_parser.py  resource_analyzer.py  topn.py  tracing_analyzer.py
analysis/data_parser/: collapsed_parser.py
analysis/java_heap_analyzer/: go.mod  java_heap_analyzer  main.go  parser.go  parser_test.go
analysis/rules/: default.yaml
analysis/tests/: test_advisor.py  test_apiserver_client.py  test_assembly_analyzer.py  test_attribution.py  test_biotrace.py  test_bw_sync_analyzer.py  test_collapsed_parser.py  test_config.py  test_e2e.py  test_error.py  test_flamegraph.py  test_hotmethod_analyzer_guards.py  test_hotmethod_pprof_outputs.py  test_memleak_analyzer.py  test_namespace_parse.py  test_pprof_parsers.py  test_resource_analyzer.py  test_stats.py  test_storage.py  test_suggestion_markdown.py  test_topn.py  test_tracing_analyzer.py
apiserver/: .dockerignore  .gitignore  Dockerfile  go.mod  go.sum  main.go
apiserver/config/: apiserver.yaml  apiserver.yaml.example  config.go
apiserver/middleware/: auth.go  log.go
apiserver/model/: model.go
apiserver/proto/: common.pb.go  common.proto  control.pb.go  control.proto  control_grpc.pb.go  generate.sh  healthcheck.pb.go  healthcheck.proto  healthcheck_grpc.pb.go  hotmethod.pb.go  hotmethod.proto  hotmethod_grpc.pb.go  init.pb.go  init.proto  init_grpc.pb.go
apiserver/server/: agent.go  analysis.go  analysis_test.go  auth.go  const_enum.go  flame.go  group.go  presign_test.go  schedule.go  server.go  settings.go  suggestion.go  (+3 more)
drop/: .dockerignore  .gitignore  CMakeLists.txt  Dockerfile  test_create_task.sh
drop/agent/: Config.cpp  Config.h  ContainerInfo.cpp  ContainerInfo.h  HealthCheckChannel.cpp  HealthCheckChannel.h  HotmethodChannel.cpp  HotmethodChannel.h  main.cpp
drop/common/: AsyncProfiler.cpp  AsyncProfiler.h  BpftraceProfiler.cpp  BpftraceProfiler.h  COSClient.cpp  Daemon.cpp  Daemon.h  IProfiler.h  JavaHeapDumper.cpp  JavaHeapDumper.h  Log.cpp  Log.h  MemrayProfiler.cpp  MemrayProfiler.h  Perf.cpp  Perf.h  PprofProfiler.cpp  PprofProfiler.h  Process.cpp  Process.h  ProcessKiller.cpp  ProcessKiller.h  ResourceProfiler.cpp  ResourceProfiler.h  ScriptRunner.cpp  ScriptRunner.h  StorageClient.cpp  StorageClient.h
drop/common/proto/: common.proto  control.proto  healthcheck.proto  hotmethod.proto  init.proto
drop/etc/: config.json  config.json.example
drop/server/: ControlService.cpp  ControlService.h  HealthCheckService.cpp  HealthCheckService.h  HotmethodService.cpp  HotmethodService.h  InitAgentInfoService.cpp  InitAgentInfoService.h  main.cpp
drop/test/: README.md  test_agent.sh  test_apiserver_analysis.sh  test_audit_fixes.sh  test_config.sh  test_daemon.sh  test_e2e.sh  test_error_handling.sh  test_grpc_services.sh  test_heartbeat.sh  test_integration_e2e.sh  test_integration_grpc.sh  test_integration_proto.sh  test_offline_detection.sh  test_profiler.sh  test_proto.sh  test_server.sh  test_server_queue.sh  test_storage.sh  test_task_state.sh
drop/test/grpc_client/: go.mod  go.sum  main.go
drop/test/gtest/: test_config.cpp
scripts/: demo.sh  demo_full_matrix.sh  package_vm_images.sh  run_all_features.sh  seed_attribution_mock.sh
web/: .dockerignore  .gitignore  Dockerfile  index.html  nginx.conf  package-lock.json  package.json  vite.config.ts
(+54 files in other folders)
